[package]
name = "mock-rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.7.2"
oas3 = "0.12.0"
anymap = "0.12.1"
serde = "1.0.210"
serde_json = "1.0.128"
rand = "0.8.5"
serde_json_diff = "0.2.0"
